[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Tajawal-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Ui/MainUi.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_color = Color( 0.627451, 0.627451, 0.627451, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/fonts/font = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 72
outline_color = Color( 0.313726, 0.545098, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="MainUi" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="LapsLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -300.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1

[node name="Bottom" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0.72549 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BottomLeft" type="VBoxContainer" parent="Bottom"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -46.0
margin_right = 187.0

[node name="BestScoreLabel" type="Label" parent="Bottom/BottomLeft"]
unique_name_in_owner = true
margin_right = 187.0
margin_bottom = 19.0
text = "BEST:  0 LAPS + 00:00"

[node name="VolumeBox" type="HBoxContainer" parent="Bottom/BottomLeft"]
margin_top = 23.0
margin_right = 187.0
margin_bottom = 42.0
rect_min_size = Vector2( 180, 0 )

[node name="Label" type="Label" parent="Bottom/BottomLeft/VolumeBox"]
margin_right = 66.0
margin_bottom = 19.0
text = "VOLUME"

[node name="VolumeSlide" type="HSlider" parent="Bottom/BottomLeft/VolumeBox"]
unique_name_in_owner = true
margin_left = 70.0
margin_right = 187.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
max_value = 5.0
value = 5.0
scrollable = false
tick_count = 6
ticks_on_borders = true

[node name="BottomRight" type="VBoxContainer" parent="Bottom"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -222.0
margin_top = -46.0

[node name="Title" type="Label" parent="Bottom/BottomRight"]
margin_right = 222.0
margin_bottom = 19.0
grow_horizontal = 2
text = "10 SECOND LAPS"
align = 2

[node name="Credits" type="Label" parent="Bottom/BottomRight"]
margin_top = 23.0
margin_right = 222.0
margin_bottom = 42.0
text = "BY @ALBERTNEZ  for LD51"
align = 2

[connection signal="value_changed" from="Bottom/BottomLeft/VolumeBox/VolumeSlide" to="." method="_on_VolumeSlide_value_changed"]
